Se corrigieron errores en el codigo.

--- a/index.html
+++ b/index.html
@@ -51,34 +51,30 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div id="elementosNavbar">
               <ul class="navbar-nav me-auto mx-lg-5" id="listaNavbar">
-                <div class="d-flex mb-md-3" id="elementosNav">
-                  <li class="nav-item p-lg-2 px-xl-2 mx-md-3 py-sm-3">
+                <div class="d-flex mb-md-1" id="elementosNav">
+                  <li class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start">
                     <a class="nav-link active" aria-current="page" href="#">
-                      <i class="fa-solid fa-house"></i>
                       Inicio
                     </a>
                   </li>
-                  <li class="nav-item p-lg-2 px-xl-2 mx-md-3 py-sm-3">
+                  <li class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start">
                     <a class="nav-link" href="#">
-                      <i class="fa-solid fa-globe"></i>
                       Libreria</a
                     >
                   </li>
-                  <li class="nav-item p-lg-2 px-xl-2 mx-md-3 py-sm-3">
+                  <li class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start">
                     <a class="nav-link" href="#">
-                      <i class="fa-solid fa-bookmark"></i>
-
                       Lista de reproduccion
                     </a>
                   </li>
-                  <li class="nav-item dropdown p-lg-2 px-xl-2 mx-md-3 py-sm-3">
+                  <li class="nav-item dropdown p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Administrador
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="./pages/abmCanciones.html">ABM Canciones</a></li>
-                      <li><a class="dropdown-item" href="./pages/abmAlbumes.html">ABM Albumes</a></li>
-                      <li><a class="dropdown-item" href="./pages/abmArtistas.html">ABM Artistas</a></li>
+                      <li class="text-center"><a class="dropdown-item" href="./pages/abmCanciones.html">ABM Canciones</a></li>
+                      <li class="text-center"><a class="dropdown-item" href="./pages/abmAlbumes.html">ABM Albumes</a></li>
+                      <li class="text-center"><a class="dropdown-item" href="./pages/abmArtistas.html">ABM Artistas</a></li>
                     </ul>
                   </li>
                 </div>
