Realice el CRUD de los artistas

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div id="elementosNavbar">
-              <ul class="navbar-nav me-auto mx-lg-5" id="listaNavbar">
+              <ul class="navbar-nav mx-lg-5" id="listaNavbar">
                 <div class="d-flex mb-md-1" id="elementosNav">
-                  <li class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start">
+                  <li class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start" id="itemNav">
                     <a class="nav-link active" aria-current="page" href="#">
                       Inicio
                     </a>
