--- a/pages/abmArtistas.html
+++ b/pages/abmArtistas.html
@@ -24,7 +24,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="../CSS/style.css" />
-
+    <link rel="stylesheet" href="../CSS/abmStyle.css" />
     <title>SoundG3</title>
   </head>
   <body>
@@ -35,7 +35,7 @@
       >
         <div class="container">
           <a class="navbar-brand m-lg-0" href="#">
-            <img src="./IMG/logosoundg3.png" alt="g3SoundGIF" id="imglogo" />
+            <img src="../img/logosoundg3.png" alt="g3SoundGIF" id="imglogo" />
           </a>
           <button
             class="navbar-toggler"
@@ -50,28 +50,33 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div id="elementosNavbar">
-              <ul class="navbar-nav me-auto mx-lg-5" id="listaNavbar">
-                <div class="d-flex mb-md-3" id="elementosNav">
-                  <li class="nav-item p-lg-2 px-xl-2 mx-md-3 py-sm-3">
-                    <a class="nav-link active" aria-current="page" href="#">
-                      <i class="fa-solid fa-house"></i>
+              <ul class="navbar-nav mx-lg-5" id="listaNavbar">
+                <div class="d-flex mb-md-1" id="elementosNav">
+                  <li
+                    class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
+                    id="itemNav"
+                  >
+                    <a
+                      class="nav-link active"
+                      aria-current="page"
+                      href="../index.html"
+                    >
                       Inicio
                     </a>
                   </li>
-                  <li class="nav-item p-lg-2 px-xl-2 mx-md-3 py-sm-3">
-                    <a class="nav-link" href="#">
-                      <i class="fa-solid fa-globe"></i>
-                      Libreria</a
-                    >
+                  <li
+                    class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
+                  >
+                    <a class="nav-link" href="#"> Libreria</a>
                   </li>
-                  <li class="nav-item p-lg-2 px-xl-2 mx-md-3 py-sm-3">
-                    <a class="nav-link" href="#">
-                      <i class="fa-solid fa-bookmark"></i>
-
-                      Lista de reproduccion
-                    </a>
+                  <li
+                    class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
+                  >
+                    <a class="nav-link" href="#"> Lista de reproduccion </a>
                   </li>
-                  <li class="nav-item dropdown p-lg-2 px-xl-2 mx-md-3 py-sm-3">
+                  <li
+                    class="nav-item dropdown p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
+                  >
                     <a
                       class="nav-link dropdown-toggle"
                       href="#"
@@ -82,20 +87,18 @@
                       Administrador
                     </a>
                     <ul class="dropdown-menu">
-                      <li>
+                      <li class="text-center">
                         <a class="dropdown-item" href="./abmCanciones.html"
                           >ABM Canciones</a
                         >
                       </li>
-                      <li>
+                      <li class="text-center">
                         <a class="dropdown-item" href="./abmAlbumes.html"
                           >ABM Albumes</a
                         >
                       </li>
-                      <li>
-                        <a class="dropdown-item" href="#"
-                          >ABM Artistas</a
-                        >
+                      <li class="text-center">
+                        <a class="dropdown-item" href="#">ABM Artistas</a>
                       </li>
                     </ul>
                   </li>
@@ -140,14 +143,14 @@
       </nav>
     </header>
     <main>
-      <div>
+      <div class="botonesABM">
         <button
           type="button"
-          class="btn btn-primary"
+          class="btn btn-success m-3"
           data-bs-toggle="modal"
           data-bs-target="#agregarArtistas"
         >
-          Agregar
+          Agregar artista
         </button>
         <div
           class="modal fade"
@@ -169,18 +172,50 @@
                   aria-label="Close"
                 ></button>
               </div>
-              <div class="modal-body">...</div>
-              <div class="modal-footer">
-                <button
-                  type="button"
-                  class="btn btn-secondary"
-                  data-bs-dismiss="modal"
-                >
-                  Cerrar
-                </button>
-                <button type="button" class="btn btn-primary">
-                  Guardar cambios
-                </button>
+              <div class="modal-body">
+                <form>
+                  <div class="mb-3">
+                    <label for="nombreArtista" class="form-label"
+                      >Nombre del artista</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="nombreArtistaAgregar"
+                      maxlength="50"
+                      minlength="1"
+                    />
+                    <div id="nombreArtista" class="form-text"></div>
+                  </div>
+                  <div class="mb-3">
+                    <label for="imagenURL" class="form-label"
+                      >URL de la imagen del artista</label
+                    >
+                    <input type="url" class="form-control" id="imagenURLAgregar" />
+                  </div>
+                  <div class="mb-3">
+                    <label for="imagenBackgroundURL" class="form-label"
+                      >URL de la imagen de fondo del artista</label
+                    >
+                    <input
+                      type="url"
+                      class="form-control"
+                      id="imagenBackgroundURLAgregar"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <button
+                      type="button"
+                      class="btn btn-danger"
+                      data-bs-dismiss="modal"
+                    >
+                      Cerrar
+                    </button>
+                    <button type="button" class="btn btn-primary" id="botonAgregar">
+                      Guardar cambios
+                    </button>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
@@ -194,109 +229,7 @@
             <th scope="col">Opciones</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>
-              <div>
-                <button
-                  type="button"
-                  class="btn btn-primary"
-                  data-bs-toggle="modal"
-                  data-bs-target="#modificacionArtistas"
-                >
-                  Modificar
-                </button>
-                <div
-                  class="modal fade"
-                  id="modificacionArtistas"
-                  tabindex="-1"
-                  aria-labelledby="modificacionArtistasLabel"
-                  aria-hidden="true"
-                >
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h1
-                          class="modal-title fs-5"
-                          id="modificacionArtistasLabel"
-                        >
-                          Modificar
-                        </h1>
-                        <button
-                          type="button"
-                          class="btn-close"
-                          data-bs-dismiss="modal"
-                          aria-label="Close"
-                        ></button>
-                      </div>
-                      <div class="modal-body">...</div>
-                      <div class="modal-footer">
-                        <button
-                          type="button"
-                          class="btn btn-secondary"
-                          data-bs-dismiss="modal"
-                        >
-                          Cerrar
-                        </button>
-                        <button type="button" class="btn btn-primary">
-                          Guardar cambios
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div>
-                <button
-                  type="button"
-                  class="btn btn-primary"
-                  data-bs-toggle="modal"
-                  data-bs-target="#borrarArtistas"
-                >
-                  Eliminar
-                </button>
-                <div
-                  class="modal fade"
-                  id="borrarArtistas"
-                  tabindex="-1"
-                  aria-labelledby="borrarArtistasLabel"
-                  aria-hidden="true"
-                >
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="borrarArtistasLabel">
-                          Eliminar
-                        </h1>
-                        <button
-                          type="button"
-                          class="btn-close"
-                          data-bs-dismiss="modal"
-                          aria-label="Close"
-                        ></button>
-                      </div>
-                      <div class="modal-body">...</div>
-                      <div class="modal-footer">
-                        <button
-                          type="button"
-                          class="btn btn-secondary"
-                          data-bs-dismiss="modal"
-                        >
-                          Cerrar
-                        </button>
-                        <button type="button" class="btn btn-primary">
-                          Guardar cambios
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </td>
-          </tr>
-        </tbody>
+        <tbody id="cuerpoTablaArtistas"></tbody>
       </table>
     </main>
     <footer>
@@ -415,7 +348,8 @@
       src="https://kit.fontawesome.com/166a168cfc.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./JS/localStorage.js"></script>
-    <script src="./JS/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../JS/localStorage.js"></script>
+    <script src="../JS/abmArtistas.js"></script>
   </body>
 </html>
