Realice la inyeccion de las canciones en la pagina principal

--- a/pages/abmCanciones.html
+++ b/pages/abmCanciones.html
@@ -231,6 +231,7 @@
             <th scope="col">id</th>
             <th scope="col">Nombre de la cancion</th>
             <th scope="col">Album</th>
+            <th scope="col">Artista</th>
             <th scope="col">Opciones</th>
           </tr>
         </thead>
