--- a/index.html
+++ b/index.html
@@ -59,11 +59,6 @@
                   </li>
                   <li class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start">
                     <a class="nav-link" href="#">
-                      Libreria</a
-                    >
-                  </li>
-                  <li class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start">
-                    <a class="nav-link" href="#">
                       Lista de reproduccion
                     </a>
                   </li>
@@ -142,287 +137,8 @@
           </button>
         </div>
       </section>
-
-      <h2 class="text-white m-3">Albumes populares</h2>
-      <section class="m-3 seccion-artistas">
-        <div class="container-fluid text-center">
-          <div class="row">
-            <div
-              class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
-            >
-              <img
-                src="./img/like.png"
-                class="img-fluid album mb-1"
-                alt="imagen de album"
-              />
-              <div class="icono-superpuesto">
-                <a href="./pages/error404.html"
-                  ><i class="bi bi-play-circle-fill text-black"></i
-                ></a>
-              </div>
-              <p class="text-center text-white">Tus me gusta</p>
-            </div>
-            <div
-              class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
-            >
-              <img
-                src="./img/fito-paez_yo-te-amor.jpg"
-                class="img-fluid album mb-1"
-                alt="imagen de album"
-              />
-              <div class="icono-superpuesto">
-                <a href="./pages/error404.html"
-                  ><i class="bi bi-play-circle-fill"></i
-                ></a>
-              </div>
-              <p class="text-center text-white">Yo Te Amo</p>
-            </div>
-            <div
-              class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
-            >
-              <img
-                src="./img/album2.jpg"
-                class="img-fluid album mb-1"
-                alt="imagen de album"
-              />
-              <div class="icono-superpuesto">
-                <a href="./pages/error404.html"
-                  ><i class="bi bi-play-circle-fill"></i
-                ></a>
-              </div>
-              <p class="text-center text-white">Oktubre</p>
-            </div>
-            <div
-              class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
-            >
-              <img
-                src="./img/metallica3.jpg"
-                class="img-fluid album mb-1"
-                alt="imagen de album"
-              />
-              <div class="icono-superpuesto">
-                <a href="./pages/error404.html"
-                  ><i class="bi bi-play-circle-fill"></i
-                ></a>
-              </div>
-              <p class="text-center text-white">Load</p>
-            </div>
-            <div
-              class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
-            >
-              <img
-                src="./img/nahuel-pennisi-album.jpg"
-                class="img-fluid album mb-1"
-                alt="imagen de album"
-              />
-              <div class="icono-superpuesto">
-                <a href="./pages/error404.html"
-                  ><i class="bi bi-play-circle-fill"></i
-                ></a>
-              </div>
-              <p class="text-center text-white">Primavera</p>
-            </div>
-            <div
-              class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
-            >
-              <img
-                src="./img/maria-becerra.avif"
-                class="img-fluid album mb-1"
-                alt="imagen de album"
-              />
-              <div class="icono-superpuesto">
-                <a href="./pages/error404.html"
-                  ><i class="bi bi-play-circle-fill"></i
-                ></a>
-              </div>
-              <p class="text-center text-white">Animal</p>
-            </div>
-            <div
-              class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
-            >
-              <img
-                src="./img/discocard1.jpg"
-                class="img-fluid album mb-1"
-                alt="imagen de album"
-              />
-              <div class="icono-superpuesto">
-                <a href="./pages/error404.html"
-                  ><i class="bi bi-play-circle-fill"></i
-                ></a>
-              </div>
-              <p class="text-center text-white">Taylor Swift</p>
-            </div>
-            <div
-              class="col-lg-3 col-md-3 col-6 mt-3 selecion-album position-relative overflow-hidden"
-            >
-              <img
-                src="./img/album6.jpg"
-                class="img-fluid album mb-1"
-                alt="imagen de album"
-              />
-              <div class="icono-superpuesto">
-                <a href="./pages/error404.html"
-                  ><i class="bi bi-play-circle-fill"></i
-                ></a>
-              </div>
-              <p class="text-center text-white">Abbey Road</p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <h2 class="text-white mx-3 mt-5">Canciones populares</h2>
-      <section class="my-3 mx-0">
-        <div class="card">
-          <div
-            class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
-          >
-            <div class="text-center btn-play">
-              <i class="bi bi-play-circle reproducir"></i>
-            </div>
-
-            <div>
-              <p class="card-title mb-0">Nombre de la Canción</p>
-              <p class="card-text">Nombre del Artista</p>
-            </div>
-
-            <div class="nombreAlbum">
-              <p class="card-text">Nombre del Álbum</p>
-            </div>
-            <div class="btn-selecion">
-              <i
-                id="corazon1"
-                class="bi bi-heart"
-                onclick="cambiarIconoFavoritos('corazon1')"
-              ></i>
-              <i
-                id="agregar1"
-                class="bi bi-plus-circle"
-                onclick="cambiarIconoAgregar('agregar1')"
-              ></i>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div
-            class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
-          >
-            <div class="text-center btn-play">
-              <i class="bi bi-play-circle reproducir"></i>
-            </div>
-
-            <div>
-              <p class="card-title mb-0">Nombre de la Canción</p>
-              <p class="card-text">Nombre del Artista</p>
-            </div>
-
-            <div class="nombreAlbum">
-              <p class="card-text">Nombre del Álbum</p>
-            </div>
-            <div class="btn-selecion">
-              <i
-                id="corazon2"
-                class="bi bi-heart"
-                onclick="cambiarIconoFavoritos('corazon2')"
-              ></i>
-              <i
-                id="agregar2"
-                class="bi bi-plus-circle"
-                onclick="cambiarIconoAgregar('agregar2')"
-              ></i>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div
-            class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
-          >
-            <div class="text-center btn-play">
-              <i class="bi bi-play-circle reproducir"></i>
-            </div>
-
-            <div>
-              <p class="card-title mb-0">Nombre de la Canción</p>
-              <p class="card-text">Nombre del Artista</p>
-            </div>
-
-            <div class="nombreAlbum">
-              <p class="card-text">Nombre del Álbum</p>
-            </div>
-            <div class="btn-selecion">
-              <i
-                id="corazon3"
-                class="bi bi-heart"
-                onclick="cambiarIconoFavoritos('corazon3')"
-              ></i>
-              <i
-                id="agregar3"
-                class="bi bi-plus-circle"
-                onclick="cambiarIconoAgregar('agregar3')"
-              ></i>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div
-            class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
-          >
-            <div class="text-center btn-play">
-              <i class="bi bi-play-circle reproducir"></i>
-            </div>
-
-            <div>
-              <p class="card-title mb-0">Nombre de la Canción</p>
-              <p class="card-text">Nombre del Artista</p>
-            </div>
-
-            <div class="nombreAlbum">
-              <p class="card-text">Nombre del Álbum</p>
-            </div>
-            <div class="btn-selecion">
-              <i
-                id="corazon4"
-                class="bi bi-heart"
-                onclick="cambiarIconoFavoritos('corazon4')"
-              ></i>
-              <i
-                id="agregar4"
-                class="bi bi-plus-circle"
-                onclick="cambiarIconoAgregar('agregar4')"
-              ></i>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div
-            class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
-          >
-            <div class="text-center btn-play">
-              <i class="bi bi-play-circle reproducir"></i>
-            </div>
-
-            <div>
-              <p class="card-title mb-0">Nombre de la Canción</p>
-              <p class="card-text">Nombre del Artista</p>
-            </div>
-
-            <div class="nombreAlbum">
-              <p class="card-text">Nombre del Álbum</p>
-            </div>
-            <div class="btn-selecion">
-              <i
-                id="corazon5"
-                class="bi bi-heart"
-                onclick="cambiarIconoFavoritos('corazon5')"
-              ></i>
-              <i
-                id="agregar5"
-                class="bi bi-plus-circle"
-                onclick="cambiarIconoAgregar('agregar5')"
-              ></i>
-            </div>
-          </div>
-        </div>
+      <h2 class="text-white mx-3 mt-5">Canciones destacadas</h2>
+      <section class="my-3 mx-0" id="seccionCanciones">
       </section>
       <section class="my-5">
         <div class="container text-center">
