Reorganizacion de codigo

--- a/index.html
+++ b/index.html
@@ -48,28 +48,28 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse align-items-center justify-content-center" id="navbarSupportedContent">
             <div id="elementosNavbar">
-              <ul class="navbar-nav mx-lg-5" id="listaNavbar">
+              <ul class="navbar-nav mx-lg-5 mx-md-4" id="listaNavbar">
                 <div class="d-flex mb-md-1" id="elementosNav">
                   <li
                     class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
                     id="itemNav"
                   >
-                    <a class="nav-link active" aria-current="page" href="#">
+                    <a class="nav-link active fs-5" aria-current="page" href="#">
                       Inicio
                     </a>
                   </li>
                   <li
                     class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
                   >
-                    <a class="nav-link" href="#"> Lista de reproduccion </a>
+                    <a class="nav-link fs-5" href="./pages/listaDeReproduccion.html"> Lista de reproduccion </a>
                   </li>
                   <li
                     class="nav-item dropdown p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
                   >
                     <a
-                      class="nav-link dropdown-toggle"
+                      class="nav-link dropdown-toggle fs-5"
                       href="#"
                       role="button"
                       data-bs-toggle="dropdown"
@@ -80,53 +80,35 @@
                     <ul class="dropdown-menu">
                       <li class="text-center">
                         <a
-                          class="dropdown-item"
+                          class="dropdown-item fs-5"
                           href="./pages/abmCanciones.html"
                           >ABM Canciones</a
                         >
                       </li>
                       <li class="text-center">
-                        <a class="dropdown-item" href="./pages/abmAlbumes.html"
+                        <a class="dropdown-item fs-5" href="./pages/abmAlbumes.html"
                           >ABM Albumes</a
                         >
                       </li>
                       <li class="text-center">
-                        <a class="dropdown-item" href="./pages/abmArtistas.html"
+                        <a class="dropdown-item fs-5" href="./pages/abmArtistas.html"
                           >ABM Artistas</a
                         >
                       </li>
                     </ul>
                   </li>
                 </div>
-                <form
-                  class="d-flex justify-content-center align-items-center p-lg-0 px-xl-2"
-                  role="search"
-                >
-                  <input
-                    id="inputBuscar"
-                    class="form-control me-2 p-lg-2 mx-xl-2"
-                    type="search"
-                    placeholder="Buscar"
-                    aria-label="Buscar"
-                  />
-                  <a href="#" type="submit" id="buscarNavbar" class="mx-2">
-                    <i
-                      class="fa-solid fa-magnifying-glass"
-                      style="color: #ffffff"
-                    ></i>
-                  </a>
-                </form>
               </ul>
             </div>
             <div class="d-flex flex-column">
               <button
-                class="btn btn-success my-3 fs-5 botonesUsuario"
+                class="btn btn-success my-3 fs-6 botonesUsuario"
                 type="submit"
               >
                 Iniciar sesión
               </button>
               <button
-                class="btn btn-success fs-5 botonesUsuario"
+                class="btn btn-success fs-6 botonesUsuario"
                 type="submit"
                 onclick="location.href='./pages/registro.html';"
               >
