--- a/pages/abmCanciones.html
+++ b/pages/abmCanciones.html
@@ -212,10 +212,10 @@
                       id="selectCategoria"
                     >
                       <option value="">Ninguno</option>
-                      <option value="categoria1">Categoria 1</option>
-                      <option value="categoria2">Categoria 2</option>
-                      <option value="categoria3">Categoria 3</option>
-                      <option value="categoria4">Categoria 4</option>
+                      <option value="Reggaeton">Reggaeton</option>
+                      <option value="Urbano">Urbano</option>
+                      <option value="Rock">Rock</option>
+                      <option value="Pop">Pop</option>
                     </select>
                   </div>
                   <div class="mb-3">
