--- a/pages/abmCanciones.html
+++ b/pages/abmCanciones.html
@@ -23,6 +23,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
     />
+    <link rel="stylesheet" href="../CSS/abmStyle.css" />
     <link rel="stylesheet" href="../CSS/style.css" />
 
     <title>SoundG3</title>
@@ -35,7 +36,7 @@
       >
         <div class="container">
           <a class="navbar-brand m-lg-0" href="#">
-            <img src="./IMG/logosoundg3.png" alt="g3SoundGIF" id="imglogo" />
+            <img src="../img/logosoundg3.png" alt="g3SoundGIF" id="imglogo" />
           </a>
           <button
             class="navbar-toggler"
@@ -50,28 +51,33 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div id="elementosNavbar">
-              <ul class="navbar-nav me-auto mx-lg-5" id="listaNavbar">
-                <div class="d-flex mb-md-3" id="elementosNav">
-                  <li class="nav-item p-lg-2 px-xl-2 mx-md-3 py-sm-3">
-                    <a class="nav-link active" aria-current="page" href="#">
-                      <i class="fa-solid fa-house"></i>
+              <ul class="navbar-nav mx-lg-5" id="listaNavbar">
+                <div class="d-flex mb-md-1" id="elementosNav">
+                  <li
+                    class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
+                    id="itemNav"
+                  >
+                    <a
+                      class="nav-link active"
+                      aria-current="page"
+                      href="../index.html"
+                    >
                       Inicio
                     </a>
                   </li>
-                  <li class="nav-item p-lg-2 px-xl-2 mx-md-3 py-sm-3">
-                    <a class="nav-link" href="#">
-                      <i class="fa-solid fa-globe"></i>
-                      Libreria</a
-                    >
+                  <li
+                    class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
+                  >
+                    <a class="nav-link" href="#"> Libreria</a>
                   </li>
-                  <li class="nav-item p-lg-2 px-xl-2 mx-md-3 py-sm-3">
-                    <a class="nav-link" href="#">
-                      <i class="fa-solid fa-bookmark"></i>
-
-                      Lista de reproduccion
-                    </a>
+                  <li
+                    class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
+                  >
+                    <a class="nav-link" href="#"> Lista de reproduccion </a>
                   </li>
-                  <li class="nav-item dropdown p-lg-2 px-xl-2 mx-md-3 py-sm-3">
+                  <li
+                    class="nav-item dropdown p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
+                  >
                     <a
                       class="nav-link dropdown-toggle"
                       href="#"
@@ -82,17 +88,15 @@
                       Administrador
                     </a>
                     <ul class="dropdown-menu">
-                      <li>
-                        <a class="dropdown-item" href="#"
-                          >ABM Canciones</a
-                        >
+                      <li class="text-center">
+                        <a class="dropdown-item" href="#">ABM Canciones</a>
                       </li>
-                      <li>
+                      <li class="text-center">
                         <a class="dropdown-item" href="./abmAlbumes.html"
                           >ABM Albumes</a
                         >
                       </li>
-                      <li>
+                      <li class="text-center">
                         <a class="dropdown-item" href="./abmArtistas.html"
                           >ABM Artistas</a
                         >
@@ -140,14 +144,14 @@
       </nav>
     </header>
     <main>
-      <div>
+      <div class="botonesABM">
         <button
           type="button"
-          class="btn btn-primary"
+          class="btn btn-success m-3"
           data-bs-toggle="modal"
           data-bs-target="#agregarCanciones"
         >
-          Agregar
+          Agregar canciones
         </button>
         <div
           class="modal fade"
@@ -159,9 +163,7 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h1 class="modal-title fs-5" id="agregarCancionesLabel">
-                  Agregar
-                </h1>
+                <h1 class="modal-title fs-5">Agregar</h1>
                 <button
                   type="button"
                   class="btn-close"
@@ -169,18 +171,90 @@
                   aria-label="Close"
                 ></button>
               </div>
-              <div class="modal-body">...</div>
-              <div class="modal-footer">
-                <button
-                  type="button"
-                  class="btn btn-secondary"
-                  data-bs-dismiss="modal"
-                >
-                  Cerrar
-                </button>
-                <button type="button" class="btn btn-primary">
-                  Guardar cambios
-                </button>
+              <div class="modal-body">
+                <form>
+                  <div class="mb-3">
+                    <label for="nombreCancion" class="form-label"
+                      >Nombre de la cancion</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="nombreCancionAgregar"
+                      maxlength="50"
+                      minlength="1"
+                    />
+                    <div id="nombreCancion" class="form-text"></div>
+                  </div>
+                  <div class="mb-3">
+                    <label for="cancionImgURL" class="form-label"
+                      >URL de la imagen de la cancion</label
+                    >
+                    <input type="url" class="form-control" id="cancionImgURL" />
+                  </div>
+                  <div class="mb-3">
+                    <label for="listaAlbumes" class="form-label">Album</label>
+                    <select
+                      name="listaAlbumes"
+                      class="form-select"
+                      id="listaAlbumes"
+                    >
+                      <option value="">Ninguno</option>
+                    </select>
+                  </div>
+                  <div class="mb-3">
+                    <label for="selectCategoria" class="form-label"
+                      >Categoria</label
+                    >
+                    <select
+                      name="selectCategoria"
+                      class="form-select"
+                      id="selectCategoria"
+                    >
+                      <option value="">Ninguno</option>
+                      <option value="Reggaeton">Reggaeton</option>
+                      <option value="Urbano">Urbano</option>
+                      <option value="Rock">Rock</option>
+                      <option value="Pop">Pop</option>
+                    </select>
+                  </div>
+                  <div class="mb-3">
+                    <label for="cancionVideoURL" class="form-label"
+                      >URL del video de la cancion</label
+                    >
+                    <input
+                      type="url"
+                      class="form-control"
+                      id="cancionVideoURL"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <label for="cancionVideoURLIframe" class="form-label"
+                      >URL del video-IFRAME de la cancion</label
+                    >
+                    <input
+                      type="url"
+                      class="form-control"
+                      id="cancionVideoURLIframe"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <button
+                      type="button"
+                      class="btn btn-danger"
+                      data-bs-dismiss="modal"
+                    >
+                      Cerrar
+                    </button>
+                    <button
+                      type="button"
+                      class="btn btn-primary"
+                      id="botonAgregar"
+                    >
+                      Guardar cambios
+                    </button>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
@@ -190,117 +264,14 @@
         <thead>
           <tr>
             <th scope="col">id</th>
-            <th scope="col">Nombre</th>
-            <th scope="col">Artista</th>
+            <th scope="col">Nombre de la cancion</th>
+            <th scope="col">Categoria</th>
             <th scope="col">Album</th>
+            <th scope="col">Artista</th>
             <th scope="col">Opciones</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-            <td>
-              <div>
-                <button
-                  type="button"
-                  class="btn btn-primary"
-                  data-bs-toggle="modal"
-                  data-bs-target="#modificacionCanciones"
-                >
-                  Modificar
-                </button>
-                <div
-                  class="modal fade"
-                  id="modificacionCanciones"
-                  tabindex="-1"
-                  aria-labelledby="modificacionCancionesLabel"
-                  aria-hidden="true"
-                >
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h1
-                          class="modal-title fs-5"
-                          id="modificacionCancionesLabel"
-                        >
-                          Modificar
-                        </h1>
-                        <button
-                          type="button"
-                          class="btn-close"
-                          data-bs-dismiss="modal"
-                          aria-label="Close"
-                        ></button>
-                      </div>
-                      <div class="modal-body">...</div>
-                      <div class="modal-footer">
-                        <button
-                          type="button"
-                          class="btn btn-secondary"
-                          data-bs-dismiss="modal"
-                        >
-                          Cerrar
-                        </button>
-                        <button type="button" class="btn btn-primary">
-                          Guardar cambios
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div>
-                <button
-                  type="button"
-                  class="btn btn-primary"
-                  data-bs-toggle="modal"
-                  data-bs-target="#borrarCanciones"
-                >
-                  Eliminar
-                </button>
-                <div
-                  class="modal fade"
-                  id="borrarCanciones"
-                  tabindex="-1"
-                  aria-labelledby="borrarCancionesLabel"
-                  aria-hidden="true"
-                >
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="borrarCancionesLabel">
-                          Eliminar
-                        </h1>
-                        <button
-                          type="button"
-                          class="btn-close"
-                          data-bs-dismiss="modal"
-                          aria-label="Close"
-                        ></button>
-                      </div>
-                      <div class="modal-body">...</div>
-                      <div class="modal-footer">
-                        <button
-                          type="button"
-                          class="btn btn-secondary"
-                          data-bs-dismiss="modal"
-                        >
-                          Cerrar
-                        </button>
-                        <button type="button" class="btn btn-primary">
-                          Guardar cambios
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </td>
-          </tr>
-        </tbody>
+        <tbody id="cuerpoTablaCanciones"></tbody>
       </table>
     </main>
     <footer>
@@ -419,7 +390,8 @@
       src="https://kit.fontawesome.com/166a168cfc.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./JS/localStorage.js"></script>
-    <script src="./JS/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../JS/localStorage.js"></script>
+    <script src="../JS/abmCanciones.js"></script>
   </body>
 </html>
