Correccon de errores en el modo responsive

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     >
                       Administrador
                     </a>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu text-center">
                       <li class="text-center">
                         <a
                           class="dropdown-item fs-5"
