Se solucionaron errores en dispositivos medianos

--- a/pages/iniciarSesion.html
+++ b/pages/iniciarSesion.html
@@ -299,5 +299,6 @@
       src="https://kit.fontawesome.com/166a168cfc.js"
       crossorigin="anonymous"
     ></script>
+    <script></script>
   </body>
 </html>
