Se solucionaron algunos conflictos con la hoja de estilos

--- a/pages/iniciarSesion.html
+++ b/pages/iniciarSesion.html
@@ -102,7 +102,7 @@
       </nav>
     </header>
     <main>
-      <section class="container" id="contenedorPrincipal">
+      <section class="container my-0" id="contenedorPrincipal">
         <div class="row justify-content-center">
           <article class="col-xl-4 col-lg-4 col-md-6 p-0">
             <img class="rounded-start-4" id="imgIniciarSesion" src="../img/music.jpg" alt="music" />
