Se linkearon algunas paginas

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
               <button
                 class="btn btn-success my-3 fs-6 botonesUsuario"
                 type="submit"
+                onclick="location.href='./pages/iniciarSesion.html';"
               >
                 Iniciar sesión
               </button>
