Realice el abm de los usuarios

--- a/pages/abmAlbumes.html
+++ b/pages/abmAlbumes.html
@@ -29,7 +29,7 @@
     <title>SoundG3</title>
   </head>
   <body>
-    <header class="fixed-top mb-5">
+    <header class="fixed-top mb-5" id="inyectarNavbar">
       <nav
         class="efectoBlur navbar navbar-expand-md bg-body-tertiary navbar bg-dark border-bottom border-body py-3"
         data-bs-theme="dark"
