--- a/pages/abmArtistas.html
+++ b/pages/abmArtistas.html
@@ -28,7 +28,7 @@
     <title>SoundG3</title>
   </head>
   <body>
-    <header class="fixed-top mb-5">
+    <header class="fixed-top mb-5" id="inyectarNavbar">
       <nav
         class="efectoBlur navbar navbar-expand-md bg-body-tertiary navbar bg-dark border-bottom border-body py-3"
         data-bs-theme="dark"
@@ -191,7 +191,11 @@
                     <label for="imagenURL" class="form-label"
                       >URL de la imagen del artista</label
                     >
-                    <input type="url" class="form-control" id="imagenURLAgregar" />
+                    <input
+                      type="url"
+                      class="form-control"
+                      id="imagenURLAgregar"
+                    />
                   </div>
                   <div class="mb-3">
                     <label for="imagenBackgroundURL" class="form-label"
@@ -211,7 +215,11 @@
                     >
                       Cerrar
                     </button>
-                    <button type="button" class="btn btn-primary" id="botonAgregar">
+                    <button
+                      type="button"
+                      class="btn btn-primary"
+                      id="botonAgregar"
+                    >
                       Guardar cambios
                     </button>
                   </div>
