--- a/pages/registro.html
+++ b/pages/registro.html
@@ -214,5 +214,6 @@
     ></script>
     <script src="../JS/localStorage.js"></script>
     <script src="../JS/registro.js"></script>
+    <script src="../JS/validaciones/validarRegistro.js"></script>
   </body>
 </html>
