--- a/pages/iniciarSesion.html
+++ b/pages/iniciarSesion.html
@@ -22,8 +22,8 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
   />
-  <link rel="stylesheet" href="../css/EstilosNav.css">
-  <link rel="stylesheet" href="../css/footer-style.css">
+  <link rel="stylesheet" href="../css/EstilosNav.css" />
+  <link rel="stylesheet" href="../css/footer-style.css" />
   <link rel="stylesheet" href="../css/Estilos-IniciarSesion.css" />
   <body>
     <header class="mb-5">
@@ -33,7 +33,7 @@
       >
         <div class="container">
           <a class="navbar-brand m-lg-0" href="#">
-            <img src="../img/logosoundg3.png" alt="g3SoundGIF" id="imglogo">
+            <img src="../img/logosoundg3.png" alt="g3SoundGIF" id="imglogo" />
           </a>
           <button
             class="navbar-toggler"
@@ -50,23 +50,21 @@
             <div id="elementosNavbar">
               <ul class="navbar-nav me-auto mx-lg-5" id="listaNavbar">
                 <div class="d-flex mb-md-3" id="elementosNav">
-                  <li class="nav-item p-lg-2 px-xl-2  mx-md-3 py-sm-3">
+                  <li class="nav-item p-lg-2 px-xl-2 mx-md-3 py-sm-3">
                     <a class="nav-link active" aria-current="page" href="#">
                       <i class="fa-solid fa-house"></i>
                       Inicio
                     </a>
                   </li>
-                  <li class="nav-item p-lg-2 px-xl-2  mx-md-3 py-sm-3">
+                  <li class="nav-item p-lg-2 px-xl-2 mx-md-3 py-sm-3">
                     <a class="nav-link" href="#">
                       <i class="fa-solid fa-globe"></i>
                       Libreria</a
                     >
                   </li>
-                  <li class="nav-item p-lg-2 px-xl-2  mx-md-3 py-sm-3">
+                  <li class="nav-item p-lg-2 px-xl-2 mx-md-3 py-sm-3">
                     <a class="nav-link" href="#">
-                      <i
-                        class="fa-solid fa-bookmark"
-                      ></i>
+                      <i class="fa-solid fa-bookmark"></i>
                       Lista de reproduccion
                     </a>
                   </li>
@@ -77,7 +75,7 @@
                 >
                   <input
                     id="inputBuscar"
-                    class="form-control me-2 p-lg-2 mx-xl-2 "
+                    class="form-control me-2 p-lg-2 mx-xl-2"
                     type="search"
                     placeholder="Buscar"
                     aria-label="Buscar"
@@ -92,10 +90,15 @@
               </ul>
             </div>
             <div class="d-flex flex-column">
-              <button class="btn btn-success my-3 fs-5 botonesUsuario" type="submit">
+              <button
+                class="btn btn-success my-3 fs-5 botonesUsuario"
+                type="submit"
+              >
                 Iniciar sesión
               </button>
-              <button class="btn btn-success fs-5 botonesUsuario" type="submit">Registrate</button>
+              <button class="btn btn-success fs-5 botonesUsuario" type="submit">
+                Registrate
+              </button>
             </div>
           </div>
         </div>
@@ -105,13 +108,20 @@
       <section class="container" id="contenedorPrincipal">
         <div class="row justify-content-center">
           <article class="col-xl-4 col-lg-4 col-md-6 p-0">
-            <img class="rounded-start-4" id="imgIniciarSesion" src="../img/music.jpg" alt="music" />
+            <img
+              class="rounded-start-4"
+              id="imgIniciarSesion"
+              src="../img/music.jpg"
+              alt="music"
+            />
           </article>
-          <article class="px-4 col-xl-4 col-lg-4 col-md-6 rounded-end-4 contenedorIniciarSesion">
+          <article
+            class="px-4 col-xl-4 col-lg-4 col-md-6 rounded-end-4 contenedorIniciarSesion"
+          >
             <form>
               <h1 class="py-3 text-center">Iniciar sesión</h1>
               <div>
-                <label for="correoIniciarSesion" class="form-label lead mb-2 "
+                <label for="correoIniciarSesion" class="form-label lead mb-2"
                   >Correo:</label
                 >
                 <input
@@ -141,12 +151,15 @@
                 <button
                   type="submit"
                   class="btn btn-success w-100 lead fw-bold mb-3"
+                  id="btnIniciarSesion"
                 >
                   Iniciar sesión
                 </button>
               </div>
               <div>
-                <p class="text-center fs-6" id="alternativaIniciarSesion">O tambien podés</p>
+                <p class="text-center fs-6" id="alternativaIniciarSesion">
+                  O tambien podés
+                </p>
                 <div>
                   <button
                     type="submit"
@@ -299,5 +312,8 @@
       src="https://kit.fontawesome.com/166a168cfc.js"
       crossorigin="anonymous"
     ></script>
+    <script src="../JS/validaciones/validarLogin.js"></script>
+    <script src="../JS/localStorage.js"></script>
+    <script src="../JS/login.js"></script>
   </body>
 </html>
